Type orm and connection to database

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,6 @@
-PORT:9001
+PORT=9001
+MYSQL_DB_HOST=127.0.0.1
+MYSQL_DB_PORT=3306
+MYSQL_DB_USERNAME=sambulo
+MYSQL_DB_PASSWORD=Sambulo@123@
+MYSQL_DB_NAME=money_tranfering_db
