invoke passport and validate user credential when authenticating

--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,4 @@ MYSQL_DB_PORT=3306
 MYSQL_DB_USERNAME=sambulo
 MYSQL_DB_PASSWORD=Sambulo@123@
 MYSQL_DB_NAME=money_tranfering_db
+COOKIE_SECRET=q384238y48324
